--- a/index.html
+++ b/index.html
@@ -39,13 +39,35 @@
     </header>
 
     <!-- About Section -->
-    <section class="about">
-        <h2>درباره ترنه</h2>
-        <p>
-            سالن زیبایی ترنه با ارائه خدمات حرفه‌ای در محیطی لوکس،
-            تجربه‌ای خاص از زیبایی را برای شما فراهم می‌کند.
-        </p>
-    </section>
+    <section class="about-owner">
+    <div class="container about-owner-content">
+
+        <div class="owner-image">
+            <img src="images/Image15.jpg" alt="مدیر سالن">
+        </div>
+
+        <div class="owner-text">
+            <h2>درباره ترنه</h2>
+            <h3>با مدیریت الهه سلوکی</h3>
+
+            <p>
+                سالن زیبایی ترنه با مدیریت حرفه‌ای و نگاه تخصصی به دنیای زیبایی،
+                با هدف ارائه خدمات لوکس و استانداردهای به‌روز تأسیس شده است.
+            </p>
+
+            <p>
+                تجربه، ظرافت در اجرا و توجه به جزئیات،
+                سه اصل اساسی در ارائه خدمات ماست.
+            </p>
+
+            <div class="owner-signature">
+                — الهه سلوکی
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- Services Section -->
     <section class="services" id="services">
@@ -189,6 +211,14 @@
                 <img src="images/Image13.png" class="social-icon" alt="Instagram">
                 <a href="https://www.instagram.com/torneh_beautysalon_/" target="_blank">@torneh_beautysalon_</a>
             </div>
+			
+			<!-- آدرس -->
+			<div class="contact-item" dir="rtl" >
+				<img src="images/Image16.png" class="social-icon" alt="Location">
+				<p>
+					اراک ، ملک ، انتهای 12 متری ملک ، بعد از کلینیک الزهرا دست چپ ، بَرِ خیابان اصلی ، سالن تُرنه.
+				</p>
+			</div>
 
         </div>
     </div>
