--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <header class="hero">
         <div class="hero-content">
             <h1>ترنه</h1>
-            <p>تجربه‌ای از زیبایی لوکس و متفاوت</p>
+            <div>
+              <p>تجربه‌ای از زیبایی لوکس و متفاوت</p>
+            </div>
             <a href="#contact" class="hero-btn">همین الان رزرو کنید</a>
         </div>
     </header>
@@ -49,6 +51,7 @@
         <div class="owner-text">
             <h2>درباره ترنه</h2>
             <h3>با مدیریت الهه سلوکی</h3>
+			<h4>مدرس فنی و حرفه‌ای</h4>
 
             <p>
                 سالن زیبایی ترنه با مدیریت حرفه‌ای و نگاه تخصصی به دنیای زیبایی،
