--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="hero-content">
-            <h1>ترنه</h1>
+            <h1>سالن زیبایی ترنه</h1>
             <div>
               <p>تجربه‌ای از زیبایی لوکس و متفاوت</p>
             </div>
@@ -81,7 +81,7 @@
         <div class="service-card">
             <img src="images/Image2.jpg" alt="احیا مو">
 			<div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
             <h3>احیا مو</h3>
         </div>
@@ -89,7 +89,7 @@
         <div class="service-card">
             <img src="images/Image3.jpg" alt="کوتاهی مو">
 			<div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
             <h3>کوتاهی مو</h3>
         </div>
@@ -97,7 +97,7 @@
         <div class="service-card">
             <img src="images/Image4.jpg" alt="پدیکور پا">
 			<div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
             <h3>پدیکور پا</h3>
         </div>
@@ -105,7 +105,7 @@
         <div class="service-card">
             <img src="images/Image5.jpg" alt="آرایش دائم">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>آرایش دائم</h3>
         </div>
@@ -113,7 +113,7 @@
         <div class="service-card">
             <img src="images/Image6.jpg" alt="رنگ و لایت">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>رنگ و لایت</h3>
         </div>
@@ -121,7 +121,7 @@
         <div class="service-card">
             <img src="images/Image7.jpg" alt="کاشت و اکستنشن مژه">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>کاشت و اکستنشن مژه</h3>
         </div>
@@ -129,7 +129,7 @@
         <div class="service-card">
             <img src="images/Image8.jpg" alt="کاشت و طراحی ناخن">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>کاشت و طراحی ناخن</h3>
         </div>
@@ -137,7 +137,7 @@
         <div class="service-card">
             <img src="images/Image9.jpg" alt="فیشیال پوست">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>فیشیال پوست</h3>
         </div>
@@ -145,7 +145,7 @@
         <div class="service-card">
             <img src="images/Image10.jpg" alt="شینیون">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>شینیون</h3>
         </div>
@@ -161,7 +161,7 @@
         <div class="service-card">
             <img src="images/Image13.jpg" alt="میکاپ">
             <div class="overlay">
-            <p>دورهای آموزشی صفر تا صد با ارئه مدرک فني حرفه ای</p>
+            <p>دورهای آموزشی صفر تا صد با ارائه مدرک فني حرفه ای</p>
         	</div>
 			<h3>میکاپ</h3>
         </div>
@@ -192,11 +192,11 @@
             <!-- شماره تماس + واتساپ -->
             <div class="contact-item">
                 <span class="icon">📞</span>
-                <a href="https://wa.me/989903784608" class="phone-number">
-                    09903784608
+                <a href="https://wa.me/989903784603" class="phone-number">
+                    09903784603
                 </a>
 
-                <a href="https://wa.me/98903784608" target="_blank" class="whatsapp-icon">
+                <a href="https://wa.me/98903784603" target="_blank" class="whatsapp-icon">
                     <img src="images/Image14.png" alt="WhatsApp">
                 </a>
             </div>
